Bug 97077 - Unable to create new database with debug build
Summary: Unable to create new database with debug build
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: All All
: highest critical
Assignee: Stephan Bergmann
URL:
Whiteboard: target:5.2.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2016-01-12 17:39 UTC by Maxim Monastirsky
Modified: 2016-10-25 19:11 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (11.64 KB, text/plain)
2016-01-12 20:33 UTC, Julien Nabet
Details
bt from "OGenericUnoDialog::OnDialogDying: where does this come from?" (13.49 KB, text/plain)
2016-01-12 20:41 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Maxim Monastirsky 2016-01-12 17:39:39 UTC
Open the database creation wizard, click Next->Finish, give a name to the file and click Save. This triggers the assert:

SfxItemPool::Delete(): Assertion `pImp->ppStaticDefaults' failed.

From:

commit 43de9a5b0f68a77a10595b3f69c6145cd9be05b6
Author: Stephan Bergmann <sbergman@redhat.com>
Date:   Wed Jan 6 16:13:52 2016 +0100

    What these SAL_INFO probably want to tell us...
    
    ...given the oldest incarnation of the code still available is
    
      HACK( "fuer Image, dort gibt es derzeit keine Statics - Bug" )
      if ( ppStaticDefaults )
    
    and
    
      HACK( "fuer Image, dort gibt es derzeit keine Statics - Bug" )
      if ( ppStaticDefaults )
    
    from cf7e1f9cc99e7c260cfab823f2c47f56035bdbd0 "INTEGRATION:
    CWS visibility03: #i45006# Moved from svtools/source/items/ (for
    svl/items1.lib)"...
    
    ...is that ppStaticDefaults should really be non-null, but "Image" (Draw?
    Impress?) needed a temporary (?) hack there.
    
    Test that assumption by asserting that ppStaticDefaults is non-null.
    
    Change-Id: I2a75547618da1d211c44176e4593f6951a0e0298
Comment 1 Alex Thurgood 2016-01-12 18:06:32 UTC
Confirming on

Version: 5.2.0.0.alpha0+
Build ID: c93a43c0c9113bc1c787fe6b3c5e58a8bfd80be0
CPU Threads: 2; OS Version: -; UI Render: default; 
Locale : fr-FR (fr.UTF-8)

OSX 10.11.2
Comment 2 Julien Nabet 2016-01-12 20:33:05 UTC
Created attachment 121887 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I could reproduce the crash just by clicking "Cancel" button after the wizard started.
Comment 3 Julien Nabet 2016-01-12 20:41:15 UTC
Created attachment 121888 [details]
bt from "OGenericUnoDialog::OnDialogDying: where does this come from?"

Also includes a gdb print of *this
Comment 4 Commit Notification 2016-01-13 07:29:40 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dc85ef3aeb28edc51a61115d15ebe6dba8bd1ef8

tdf#97077: So ppStaticDefaults can be null after all

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.