tdf#97077: So ppStaticDefaults can be null after all

...at least in Base, and the assumption in
43de9a5b0f68a77a10595b3f69c6145cd9be05b6 "What these SAL_INFO probably want to
tell us..." was wrong

Change-Id: Ic9377b72f35c130ecd34dbf76c1f6a0f4b235c69